Moved to 0x as standard & added favicon

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="ui container">
       <div>
       <div class="ui right input " style="margin-top: 1rem; margin-right: 0.8rem;">
-        <input id="contract-address" type="text" spellcheck="false" placeholder="Contract address"
+        <input id="contract-address" type="text" spellcheck="false" placeholder="Contract address starting with 0x"
           style="width: 380px;">
         <button id="load-contract" class="ui primary button"
           style="vertical-align: top; margin-left: 1em;">Load</button>
